--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="open_drawer">Open drawer</string>
     <string name="close_drawer">Close drawer</string>
     <string name="registro_vendedor">Registro Vendedor</string>
-    <string name="nombres">Nombres@@</string>
+    <string name="nombres">Nombres</string>
     <string name="email">Email</string>
     <string name="contrase_a">Contraseña</string>
     <string name="confirmar_contrase_a">Confirmar Contraseña</string>
@@ -27,4 +27,8 @@
     <string name="no_tienes_cuenta">No tienes cuenta?</string>
     <string name="registrarme_vendedor">Registrarme</string>
     <string name="agregar_productos">Agregar Productos</string>
+    <string name="inicio_cliente">Inicio</string>
+    <string name="mi_perfil">Mi Perfil</string>
+    <string name="cerrar_secion_cliente">Cerrar Sesión</string>
+    <string name="tienda_cliente">Tienda</string>
 </resources>
